<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="androidcustomtabs.sergiorangeles.com.android_custom_tabs_example.controller.customtabs.CustomTabActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/activity_custom_tab_display_title"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            android:maxLines="2"
            android:ellipsize="end" />

        <CheckBox
            android:id="@+id/activity_custom_tab_display_title_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/activity_custom_tab_color_toolbar"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            android:maxLines="2"
            android:ellipsize="end" />

        <CheckBox
            android:id="@+id/activity_custom_tab_color_toolbar_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/activity_custom_tab_display_custom_back_button"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            android:maxLines="2"
            android:ellipsize="end" />

        <CheckBox
            android:id="@+id/activity_custom_tab_custom_back_button_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/activity_custom_tab_add_custom_animations"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            android:maxLines="2"
            android:ellipsize="end" />

        <CheckBox
            android:id="@+id/activity_custom_tab_custom_animations_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/activity_custom_tab_add_action_button"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            android:maxLines="2"
            android:ellipsize="end" />

        <CheckBox
            android:id="@+id/activity_custom_tab_action_button_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/activity_custom_tab_add_custom_menu"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            android:maxLines="2"
            android:ellipsize="end" />

        <CheckBox
            android:id="@+id/activity_custom_tab_custom_menu_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
        </LinearLayout>

    <Button
        android:id="@+id/activity_custom_tab_open_tab_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/activity_custom_tab_load_custom_tab" />


</LinearLayout>
